// Copyright 2018, OpenCensus Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.opencensus.interop";
option java_outer_classname = "EchoServiceProto";

package interop;

message EchoRequest {
}

message EchoResponse {
	bytes trace_id	    = 1;
	bytes span_id	    = 2;
	bytes tags_blob	    = 3;
	int32 trace_options = 4;
}

service EchoService {
	rpc echo(EchoRequest) returns (EchoResponse) {}
}
